Dashboard Submit Partially for Debug

--- a/web/src/components/Dashboard/Dashboard.css
+++ b/web/src/components/Dashboard/Dashboard.css
@@ -1,5 +1,9 @@
-#main-container.loaded > #card-container {
-  grid-template-columns: repeat(3, 1fr);
+#main-container {
+  /* grid-template-columns: repeat(3, 3fr); */
   grid-gap: 32px;
   top: 0;
+  grid-template-columns: auto auto auto;
+  display: grid;
+  width: 50%;
+  margin: auto;
 }
