--- a/web/src/components/Dashboard/Dashboard.css
+++ b/web/src/components/Dashboard/Dashboard.css
@@ -1,10 +1,10 @@
 @import "~antd/dist/antd.css";
 
-.main {
+#main {
   background-color: #333;
 }
 
-.title {
+#title {
   font-weight: 800;
   width: fit-content;
   display: grid;
@@ -16,7 +16,7 @@
   padding-top: 40px;
 }
 
-.searchBar {
+#searchBar {
   display: grid;
   margin: 20px auto;
   width: 500px;
@@ -28,17 +28,17 @@
   border-bottom: solid 2px #555;
 }
 
-.searchBar:hover {
+#searchBar:hover {
   border-color: transparent;
   border-bottom: solid 2px #da8388;
 }
 
-.searchBar:focus {
+#searchBar:focus {
   border-color: transparent;
   border-bottom: solid 2px #da8388;
 }
 
-.filterBar {
+#filterBar {
   display: grid;
   position: relative;
   grid-template-columns: repeat(4, 1fr);
