--- a/web/src/styles/theme.css
+++ b/web/src/styles/theme.css
@@ -32,6 +32,25 @@
     .card-transluscent {
         @apply min-h-[3vh] h-48 max-w-sm rounded-2xl bg-transluscent;
         border: 2px solid rgba(255, 255, 255, 0.3);
+        animation: show 0.3s;
+    }
+
+    .card-transluscent-active {
+        @apply min-h-[3vh] h-48 max-w-sm rounded-2xl bg-transluscent;
+        border: 2px solid rgba(255, 255, 255, 0.3);
+        animation: show 0.3s;
+        box-shadow: -5px 5px 25px rgba(0, 0, 0, 0.3);
+    }
+
+    @keyframes show {
+        from {
+            opacity: 0;
+            transform: translateY(5px);
+        }
+        to {
+            opacity: 1;
+            transform: translateY(0);
+        }
     }
 
     /* 半透明按钮 */
@@ -41,12 +60,24 @@
 
     /* 半透明背景，private scope，直接用上面两个就好 */
     .bg-transluscent {
-        @apply backdrop-blur-md;
+        @apply backdrop-blur-sm;
         background: radial-gradient(
             90% 130% at 0% -20%,
-            rgba(255, 255, 255, 0.49),
-            rgba(255, 255, 255, 0.1)
+            rgba(255, 255, 255, 0.25),
+            rgba(255, 255, 255, 0.05)
         );
+        background-clip: padding-box;
+        box-shadow: -5px 5px 15px rgba(0, 0, 0, 0.1);
+    }
+
+    .bg-transluscent-focus {
+        @apply backdrop-blur-sm;
+        /* background: radial-gradient(
+            90% 130% at 0% -20%,
+            rgba(255, 255, 255, 0.25),
+            rgba(255, 255, 255, 0.05)
+        ); */
+        background: green;
         background-clip: padding-box;
         box-shadow: -5px 5px 15px rgba(0, 0, 0, 0.1);
     }
