--- a/web/src/components/User/Login/Login.css
+++ b/web/src/components/User/Login/Login.css
@@ -208,8 +208,8 @@ input {
 
     border-radius: 34px;
 
-    border: 2px solid;
-    border-color: rgba(255, 173, 222, 1) rgba(137, 149, 255, 1);
+    border: 4px solid;
+    border-color: rgba(255, 173, 222, 1);
     border-radius: 34px;
 
     font-family: 'Source Sans 3';
