--- a/web/src/styles/defaults.css
+++ b/web/src/styles/defaults.css
@@ -1,5 +1,20 @@
-@tailwind components;
+input:-webkit-autofill {
+    -webkit-box-shadow: 0 0 0px 1000px yellow inset;
+}
+
+body {
+    margin: 0;
+    font-family: source-han-sans-simplified-c, -apple-system, BlinkMacSystemFont,
+        sans-serif;
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
+}
+
+code {
+    font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+        monospace;
+}
 
 body * {
-    @apply font-body;
+    box-sizing: border-box;
 }
