fixed input:autofill styling

--- a/web/src/styles/defaults.css
+++ b/web/src/styles/defaults.css
@@ -1,5 +1,6 @@
-input:-webkit-autofill {
-    -webkit-box-shadow: 0 0 0px 1000px yellow inset;
+input:autofill {
+    box-shadow: 0 0 0px 1000px #ffadde33 inset;
+    border-radius: 100px;
 }
 
 body {
