New log-in page integration (#23)
* Login.css: removed unused rules

* Login.page: migrated to tw

* useToggle: created

* removed antd

* removed unused assets

* moved pages

* custom hook for auth code cooldown

* useUserLogInStatus: reverted to prev ver

* Interfaces: renamed interfaces

* tailwind: added additional rules

* tailwind: added additional classes

* consolidated css files

* removed antd from RequestPage in favor of tw

* changed styling logic for overall project

!avoid using Fragment in the future

* CourseCard: added additional css

* removed unused files

* removed unnecessary link on NavBar

* Footer: updated text size

* Login: finished

* removed unused css

* NavBar: updated navigation rules

* Added confirmation animation to auth code button

* fixed input:autofill styling

* Login: removed redundant navigation

* Login: added support for the enter key

* Login: fixed issues with submit

* App: fixed init

* App: created a route for About & FAQ

* Update defaults.css

* autofill: moved border radius to element

* App: fixed fetch course

* CourseCard: updated cursor and hover styles

* CourseCard: standardized strctr

* CourseCard: added comments

* LogIn: clean up, updated nav f(x)

* LogOut: created components & associated f(x)

* getCourses: added if to check user status

* LogIn: updated redirect logic

* App: fixed useEffect dependencies

* Login: fixed API Call

* created new hook & clean-up

* Navigation: fixed redirects

* Cookie: CC => FC

* `var` => `let`

* Routes: hid unused routes

* Playground: removed unused code

* Theme: condensed & removed unused

* UtilCard: cleaned up

* Dashboard: responsive support

* CourseCard: removed unused tw

--- a/web/src/styles/defaults.css
+++ b/web/src/styles/defaults.css
@@ -1,5 +1,21 @@
-@tailwind components;
+input:autofill {
+    box-shadow: 0 0 0px 1000px #ffadde33 inset;
+    background-color: transparent;
+}
+
+body {
+    margin: 0;
+    font-family: source-han-sans-simplified-c, -apple-system, BlinkMacSystemFont,
+        sans-serif;
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
+}
+
+code {
+    font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+        monospace;
+}
 
 body * {
-    @apply font-body;
+    box-sizing: border-box;
 }
