--- a/web/src/styles/theme.css
+++ b/web/src/styles/theme.css
@@ -3,54 +3,36 @@
 @tailwind utilities;
 
 @layer components {
-    /* components 的使用案例在 Playground.page 里 */
-
     /* 圆头 button */
     .btn-rounded-full {
-        @apply bg-accent text-[#FFF] font-bold py-2 px-4 rounded-full;
+        @apply bg-accent text-white font-bold py-2 px-4 rounded-full min-w-max;
     }
 
     /* 弧角 button */
     .btn-rounded-corner {
-        @apply bg-accent text-[#FFF] font-bold py-2 px-4 rounded-lg;
+        @apply bg-accent text-white font-bold py-2 px-4 rounded-lg min-w-max;
     }
 
-    /* 渐变 button */
-    .btn-rounded-gradient {
-        @apply text-graphite font-bold py-2 px-4 rounded-full border-solid border-highlight border-4;
-    }
-
-    /* 渐变 button: hover （如果能用 Sass 就好了） */
+    /* 渐变 button:hover */
     .btn-rounded-gradient:hover {
-        @apply text-[#FFF];
-        background: linear-gradient(210deg, #ffadde, #8995ff);
-        background-origin: border-box;
-        border: 4px solid #ffffff00;
+        @apply border-[#00000000];
+        @apply bg-origin-border bg-acc-hlt-gradient;
+    }
+
+    /* 渐变 bg */
+    .bg-acc-hlt-gradient {
+        background: linear-gradient(245deg, #ffadde 3.13%, #8995ff 108.41%);
     }
 
     /* 半透明卡片 */
     .card-transluscent {
-        @apply min-h-[3vh] h-48 max-w-sm rounded-2xl bg-transluscent;
+        @apply rounded-2xl bg-transluscent animate-showing;
         border: 2px solid rgba(255, 255, 255, 0.3);
-        animation: show 0.3s;
     }
 
     .card-transluscent-active {
-        @apply min-h-[3vh] h-48 max-w-sm rounded-2xl bg-transluscent;
-        border: 2px solid rgba(255, 255, 255, 0.3);
-        animation: show 0.3s;
+        @apply card-transluscent;
         box-shadow: -5px 5px 25px rgba(0, 0, 0, 0.3);
-    }
-
-    @keyframes show {
-        from {
-            opacity: 0;
-            transform: translateY(5px);
-        }
-        to {
-            opacity: 1;
-            transform: translateY(0);
-        }
     }
 
     /* 半透明按钮 */
@@ -70,24 +52,7 @@
         box-shadow: -5px 5px 15px rgba(0, 0, 0, 0.1);
     }
 
-    .bg-transluscent-focus {
-        @apply backdrop-blur-sm;
-        /* background: radial-gradient(
-            90% 130% at 0% -20%,
-            rgba(255, 255, 255, 0.25),
-            rgba(255, 255, 255, 0.05)
-        ); */
-        background: green;
-        background-clip: padding-box;
-        box-shadow: -5px 5px 15px rgba(0, 0, 0, 0.1);
-    }
-
-    /* 标题文字 */
-    .text-title {
-        @apply text-graphite text-3xl font-bold font-body p-2;
-    }
-
-    .logo {
+    .bg-logo-gradient {
         @apply absolute bg-clip-text text-transparent;
         background: conic-gradient(
             from 90deg at 50.68% 49.03%,
@@ -98,8 +63,9 @@
         );
     }
 
-    .logo-overlay {
-        @apply logo;
-        background-blend-mode: multiply;
+    @variants hover {
+        .card-transluscent-hover {
+            @apply card-transluscent-active;
+        }
     }
 }
