theme: dark mode support

--- a/web/src/styles/defaults.css
+++ b/web/src/styles/defaults.css
@@ -19,3 +19,13 @@ code {
 body * {
     box-sizing: border-box;
 }
+
+body {
+    color: #212121;
+}
+
+@media (prefers-color-scheme: dark) {
+    body {
+        color: #efefef;
+    }
+}
