--- a/web/src/styles/theme.css
+++ b/web/src/styles/theme.css
@@ -26,14 +26,20 @@
 
     /* 半透明卡片 */
     .card-transluscent {
-        @apply rounded-3xl bg-transluscent animate-showing;
+        @apply rounded-3xl bg-transluscent dark:bg-transluscent-dark animate-showing;
         border: 0.5px solid rgba(255, 255, 255, 0.3);
-        
 
         /**
         the original
         border: 2px solid rgba(255, 255, 255, 0.3);
         */
+    }
+
+    @media (prefers-color-scheme: dark) {
+        .card-transluscent {
+            @apply rounded-3xl bg-transluscent-dark animate-showing;
+            border: 0.5px solid rgba(3, 9, 68, 0.3);
+        }
     }
 
     .card-transluscent-active {
@@ -69,9 +75,22 @@
         );
     }
 
-    @variants hover {
+    @layer utilities {
         .card-transluscent-hover {
             @apply card-transluscent-active;
+        }
+    }
+
+    @layer utilities {
+        .bg-transluscent-dark {
+            @apply backdrop-blur-sm;
+            background: radial-gradient(
+                90% 130% at 0% -20%,
+                rgba(8, 12, 48, 0.1),
+                rgba(8, 12, 48, 0.05)
+            );
+            background-clip: padding-box;
+            box-shadow: -5px 5px 15px rgba(0, 0, 0, 0.1);
         }
     }
 }
