--- a/web/src/styles/defaults.css
+++ b/web/src/styles/defaults.css
@@ -24,8 +24,8 @@ body {
     color: #212121;
 }
 
-@media (prefers-color-scheme: dark) {
+/* @media (prefers-color-scheme: dark) {
     body {
         color: #efefef;
     }
-}
+} */
